data/cypherpunks-marc/jlalvarez_uci_cu.txt

@_date: 2012-09-25 12:54:05
@_author: Jorge Luis Roque Alvarez 
@_subject: getting started 
Hello iam having some troubles to get started, iam currently using ubuntu 12.04.1 and i install libreoffice-dev package to start development when i try to run an example of java i get lots of errors like this
i think the problems is that it could not find the proper libraries could anybody help me with this
do i need to install anything else?
do i need some specific library?
thanks in advanced
Best Regards,
Jorge Luis
10mo. ANIVERSARIO DE LA CREACION DE LA UNIVERSIDAD DE LAS CIENCIAS INFORMATICAS...
CONECTADOS AL FUTURO, CONECTADOS A LA REVOLUCION

@_date: 2012-09-20 17:31:06
@_author: Jorge Luis Roque Alvarez 
@_subject: getting started 
Hi iam just learning how to develop; my first step is to understand the examples i already install the sdk from the repository aim currently using ubuntu 12.04.1 but when i run make to the bookmarkInsertation(example in java)  it do not find any library i'm i missing something could anybody help me with this. Iam just having this problems with java examples, since i test c++ ex and they work ok.
thanks in advanced PS: this is a section of the output when running make
mkdir -p /usr/lib/libreoffice/sdk//LINUXexample.out/class/JavaTextExamples
"/bin/javac"  -classpath ":/usr/lib/libreoffice/sdk//LINUXexample.out/class/JavaTextExamples" -d /usr/lib/libreoffice/sdk//LINUXexample.out/class/JavaTextExamples BookmarkInsertion.java
BookmarkInsertion.java:44: error: package com.sun.star.uno does not exist
import com.sun.star.uno.UnoRuntime;
                       ^
BookmarkInsertion.java:78: error: package com.sun.star.text does not exist
    public static void markList(com.sun.star.text.XTextDocument xTextDocument,
                                                 ^
BookmarkInsertion.java:108: error: package com.sun.star.text does not exist
    public static void InsertBookmark(com.sun.star.text.XTextDocument xTextDocument,
                                                       ^
BookmarkInsertion.java:109: error: package com.sun.star.text does not exist
                                      com.sun.star.text.XTextRange xTextRange,
                                                       ^
BookmarkInsertion.java:149: error: package com.sun.star.text does not exist
        com.sun.star.text.XTextDocument xTextDocument, String sSearchString)
                         ^
BookmarkInsertion.java:148: error: package com.sun.star.uno does not exist
Best Regards,
Jorge Luis
10mo. ANIVERSARIO DE LA CREACION DE LA UNIVERSIDAD DE LAS CIENCIAS INFORMATICAS...
CONECTADOS AL FUTURO, CONECTADOS A LA REVOLUCION

@_date: 2012-09-19 14:23:05
@_author: Jorge Luis Roque Alvarez 
@_subject: getting started 
Hi my name is Jorge Luis Roque and iam trying to get involved in libreoffice development iam looking for some help on how to start development (documentation, technologies, and so on).
thanks in advanced
10mo. ANIVERSARIO DE LA CREACION DE LA UNIVERSIDAD DE LAS CIENCIAS INFORMATICAS...
CONECTADOS AL FUTURO, CONECTADOS A LA REVOLUCION
